# thor

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Monthly Release Tasks.postman_collection.json  README.md  __init__.py  coverage.xml  cron_tester.py  docker-compose.yml  docs.py  dummy_thor_config.json  load_env_vars.py  my_wrapper_script.sh  openapi.yaml  openapi.yml  pyproject.toml  release_names.csv  repo_list.txt  shell_script_target.txt  start_notes.txt  svcs_to_skip_list.txt  test_thor_config.json  thor.env  thor_config.json
.github/workflows/: buildpipeline.yaml  cherrypick_commit.yaml  ci.yaml  ci.yml  deploy_monthly_release.yaml  docs.yaml  test_deploy_monthly_release.yaml  tests.yml
database/: config.py  main.py  models.py  release_dao.py  task_dao.py
dev_simulator/: simulate_prs.py
docs/: openapi.yaml
helm/thor/: Chart.yaml  values.yaml
jenkins-jobs-scripts/step1/: create-release-in-jira.py  create-release-in-jira.sh  create-release-tasks-in-jira.py  dummy1.sh
jenkins-jobs-scripts/step10/: check_ecr_image.py  check_ecr_image.sh  dummy10.sh  push-gen3-monthly-release-images-to-aws-ecr.sh
jenkins-jobs-scripts/step11/: dummy11.sh  update-ci-env-with-latest-integration-branch.groovy  update-ci-env-with-latest-integration-branch.sh  update-ci-env-with-release-version.sh
jenkins-jobs-scripts/step12/: gen3-qa-release-notes-generator.sh  generate_release_notes.py  generate_release_notes.sh
jenkins-jobs-scripts/step13/: dummy13.sh  placeholder.txt  slack_release_publish.py  slack_release_publish.sh
jenkins-jobs-scripts/step14/: delete-integration-branch-from-ecr.py  delete-integration-branch-from-ecr.sh  dummy14.sh
jenkins-jobs-scripts/step15/: mark-gen3-release-as-released.py  mark-gen3-release-as-released.sh
json_objs/: sample_task_0.json  text_test.json  words.txt
src/: __init__.py
src/scripts/: update-ci-env.py  (+1 more)
tests/: clear_tables_reseed.py  conftest.py  get_release_task_specific.py  importer_module.py  release_test_data.json  release_test_data.txt  task_test_data.txt  test_api_get_all_release_tasks.py  test_api_get_all_releases.py  test_api_get_all_tasks.py  test_api_get_release_task_specific.py  test_api_get_single_release.py  test_api_get_single_task.py  test_api_post_release.py  test_api_post_task.py  test_api_releases.py  test_duplicate_releases.py  test_get_release_task_specific.py  test_html_status_ui.py  test_jenkins_job_manager.py  test_jjm_write_task_result.py  test_put_task_status.py  test_release_cycles.py  test_restart_release.py  test_run_logging.py  test_run_task.py  test_scheduler.py
thor_simulator/: simulate_prs.py
workspace/: shell_script_target.txt
(+113 files in other folders)
