[tool.poetry]
name = "thor"
version = "0.0.1"
description = "Gen3 Release Orchestrator"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version="^0.18.2"}
gunicorn = "^20.1.0"
cdislogging = "^1.0.0"
jira = "3.0.0.0a0"
gen3git = {git = "https://github.com/uc-cdis/release-helper.git", rev = "gen3release"}
pygit2 = "^1.6.1"
SQLAlchemy = "^1.4.23"
psycopg2 = "^2.9.1"
pytest = "^6.2.4"
pytest-cov = "^2.8"
aiocron = "^1.7"
mock = "^4.0.3"
freezegun = "^1.1.0"
python-dotenv = "^0.19.0"
nest-asyncio = "^1.5.1"
jsontemplates = "^0.1.0"

[tool.poetry.dev-dependencies]
pyyaml = "^5.3.1"

[tool.poetry.plugins."thor.modules"]
"dao" = "thor.dao"
"maestro" = "thor.maestro"
"time" = "thor.time"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
