[tool.poetry]
name = "thor"
version = "0.1.1"
description = "Gen3 Release Orchestrator"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version="^0.18.2"}
gunicorn = "^23.0.0"
cdislogging = "^1.0.0"
jira = "3.0.1"
SQLAlchemy = "^1.4.23"
pytest = "^6.2.4"
pytest-cov = "^2.8"
aiocron = "^1.7"
mock = "^4.0.3"
freezegun = "^1.1.0"
python-dotenv = "^0.19.0"
nest-asyncio = "^1.5.1"
jsontemplates = "^0.1.0"
PyYAML = ">5.0"
awscli = "^1.27.75"
boto3 = "^1.18.17"
psycopg2-binary = "^2.9.9"

[tool.poetry.plugins."thor.modules"]
"dao" = "thor.dao"
"maestro" = "thor.maestro"
"time" = "thor.time"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
